--- a/H14.md
+++ b/H14.md
@@ -1,6 +1,6 @@
 # H14
 
- Harjoituksen tarkoituksena on kääntää luoda uusia komentoja käytten Bashia ja Pythonia.
+ Harjoituksen tarkoituksena on luoda uusia komentoja käytten Bashia ja Pythonia(3).
  
 ### Laitteisto
  
@@ -75,73 +75,61 @@ Loin vielä uuden käyttäjän komennolla:
 
   
 
-## Komento Pythonilla (11:34)
+## Komento Python3:lla (11:34)
 
-Luodaan ohjelma, mikä printtaa 'Hello World', käyttäen Bashia.
+Luodaan komento, joka kertoo kellonajan ja päivämäärän käyttäen Pythonia.
 
-Aluksin loin tiedoston micro-editorilla komennolla:
+Aloitin luomalla tiedoston komennolla:
 
-    $ micro HelloBash.sh
+    $ micro aika
     
-Ja lisäsin sen sisälle:
-
-    echo "Hello World"
     
-  ![image](https://user-images.githubusercontent.com/106889187/224003945-b74f7054-90c2-4a48-a473-4a2a689cc9c8.png)
-  
-  Ajoin ohjelman komennolla:
-  
-     $ bash HelloBash.sh
-     
- Ja sain odotetun lopputuloksen.
+ Lisäsin tiedoston sisälle seuraavan koodin:
  
- ![image](https://user-images.githubusercontent.com/106889187/224004495-ebd03ea5-6efe-46b6-acd6-8757f8b483b9.png)
-
-## Algol 68 (13:16)
-
-Luodaan ohjelma, mikä printtaa 'Hello World', käyttäen Algol 68-kieltä.
-
-Asennetaan tarvittavat tiedostot käyttäen komentoja:
-
-     $ sudo apt-get update
-     $ sudo apt-get install algol68g 
-     
- Luodaan seuraavaksi tiedosto käyttäen micro-editoria komennolla:
- 
-     $ micro HelloAlgol68.a68
-     
- Lisätään tiedoston sisälle:
- 
- 
-    main:
-    (
-        printf($"Hello World"l$)
-    )
+![image](https://user-images.githubusercontent.com/106889187/224669318-34fd1e7b-a581-4229-90d2-0264f879314d.png)
 
 
-Ajetaan ohjelma komennolla:
+Kokeilin ajaa komennon ja ohjelma toimi.
 
-    $ a68g HelloAlgol68.a68
-    
- 
-![image](https://user-images.githubusercontent.com/106889187/224011099-0bc7c89f-d528-46f6-8eb5-cafc3ca39c4d.png)
 
-Odotettu lopputulos.
+![image](https://user-images.githubusercontent.com/106889187/224669041-e8583b66-f8b7-4041-a909-8684730117d3.png)
+
+
+Seuraavaksi tarkistin ohjelman oikeudet komennolla:
+
+    $ ls -l aika
+
+ja päivitin suoritusoikeudet komennolla:
+
+    $ sudo chmod ugo+x aika
+
+![image](https://user-images.githubusercontent.com/106889187/224670052-b779bec4-050e-49d3-b2ce-c7bbe187161a.png)
+
+![image](https://user-images.githubusercontent.com/106889187/224670218-d6e1cbe7-c28d-4eaf-af95-bd260f388904.png)
+
+
+Sitten kopion ohjelman kansioon '/usr/local/bin', jotta ohjelman voi suorittaa kuten muutkin bash-komennot, käyttäen komentoa:
+
+    $ sudo cp aika /usr/local/bin
+
+![image](https://user-images.githubusercontent.com/106889187/224670732-3754859c-3cc8-42aa-8249-ab9841c0645f.png)
+
+Testasin vielä toisella käyttäjällä ja ohjelma toimi odotetusti.
+
+![image](https://user-images.githubusercontent.com/106889187/224671146-23932a0a-5b80-450e-9a55-0fffa8a49259.png)
+
+
 
  ## Lopuksi 
  
- Tässä harjoituksessa harjoittelin Hello Worldia eri kielillä.
+ Tässä harjoituksessa harjoittelin 
  
  
 ## Lähteet
 
 Linux Palvelimet 2023 alkukevät, Tero Karvinen (https://terokarvinen.com/2023/linux-palvelimet-2023-alkukevat/)
 
-Hello World Python3, Bash, C, C++, Go, Lua, Ruby, Java – Programming Languages on Ubuntu 18.04, Tero Karvinen - 27.9.2018 (https://terokarvinen.com/2018/hello-python3-bash-c-c-go-lua-ruby-java-programming-languages-on-ubuntu-18-04/)
-
-Hello World (ALGOL 68) (https://literateprograms.org/hello_world__algol_68_.html)
-
-a68g (https://manpages.ubuntu.com/manpages/xenial/man1/a68g.1.html)
+30 Bash Script Examples, Fahmida Yesmin - 2018 (https://linuxhint.com/30_bash_script_examples/)
 
 
 #### Tehnyt Roi Partanen (9.3.2023)
