--- a/H14.md
+++ b/H14.md
@@ -15,11 +15,11 @@
 
 
 
-## Komento Bahilla (11:16)
+## Komento Bashilla (11:16)
 
 Luodaan komento, joka tervehtii käyttäjää tämän syöttämän nimen perusteella. 
 
-Aloitin harjoituksen siirtymällä aikaisemmin luotoon kansion 'scripting' komennolla:
+Aloitin harjoituksen siirtymällä aikaisemmin luotoon kansion 'scripting', komennolla:
 
     $ cd scripting/
   
@@ -118,11 +118,46 @@ Testasin vielä toisella käyttäjällä ja ohjelma toimi odotetusti.
 
 ![image](https://user-images.githubusercontent.com/106889187/224671146-23932a0a-5b80-450e-9a55-0fffa8a49259.png)
 
+## Bash-komento monelle tiedostolle (12:33)
+
+Luodaan bash-komento, joka listaa tiedostot ja niiden sisällön.
+
+Aloitin luomalla tiedoston komennolla:
+
+    $ micro filut
+    
+Ja lisäsin sen sisälle:
+
+![image](https://user-images.githubusercontent.com/106889187/224691363-428312bf-f474-4760-80c1-c210e9036f54.png)
+
+Testasin ohjelman toimivuutta komennolla:
+
+    $ bash filut
+    
+![image](https://user-images.githubusercontent.com/106889187/224691617-34fc1197-e348-4405-b329-ec69b426631d.png)
+
+Ja ohjelma listasi tiedostot ja niiden sisällön.
+
+
+Seuraavaksi päivitin ohjelman suoritusoikeudet ja tallensin sen kansioon '/usr/local/bin', käyttäen komentoja:
+
+    $ sudo chmod ugo+x filut
+    $ sudo cp filut /usr/local/bin
+
+Lopuksi testasin eri käyttäjillä tomiiko ohjelma.
+
+![image](https://user-images.githubusercontent.com/106889187/224692862-ac3139db-fad8-4d5e-8c58-658a9aa7ae1a.png)
+
+![image](https://user-images.githubusercontent.com/106889187/224693298-570659f9-ebb7-4ea7-ace6-5ef91f4da762.png)
+
+![image](https://user-images.githubusercontent.com/106889187/224693626-20eaa833-cefe-47f4-b1d7-921cd484ba9d.png)
+
+Ohjelma toimi odotetusti kaikilla käyttäjillä.
 
 
  ## Lopuksi 
  
- Tässä harjoituksessa harjoittelin 
+ Tässä harjoituksessa harjoittelin uusien komentojen luontia Bahilla ja Pythonilla.
  
  
 ## Lähteet
@@ -132,4 +167,4 @@ Linux Palvelimet 2023 alkukevät, Tero Karvinen (https://terokarvinen.com/2023/l
 30 Bash Script Examples, Fahmida Yesmin - 2018 (https://linuxhint.com/30_bash_script_examples/)
 
 
-#### Tehnyt Roi Partanen (9.3.2023)
+#### Tehnyt Roi Partanen (13.3.2023)
